--- a/public/css/style.css
+++ b/public/css/style.css
@@ -1,7 +1,70 @@
+html {
+  scroll-padding-top: rem;
+}
+
+section {
+  scroll-margin-top: 5rem;
+}
+
 .sweet-button {
   background-color: #027941;
 }
 
 .sweet-button:not([disabled]):hover {
   background-color: #198754;
+}
+
+.text-justify {
+  text-align: justify;
+}
+
+.top-navbar {
+  height: 60px;
+}
+
+.top-navbar-list {
+  margin-top: 16px;
+}
+
+.sub-navbar {
+  border-bottom: 1px solid #027941;
+  z-index: 1;
+}
+
+.sticky-navbar {
+  position: fixed;
+  top: 0;
+  width: 100%;
+  transition: all 0.5s ease-in-out;
+  -webkit-box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.4);
+  z-index: 2;
+}
+
+.hr-short {
+  margin-left: auto;
+  margin-right: auto;
+  width: 100px;
+  border: 1px solid #198754;
+  border-radius: 30px;
+}
+
+.carousel {
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.carousel-size {
+  height: 75vh;
+}
+
+.text-neon {
+  color: #fff;
+  text-shadow: 0 0 5px #000, 0 0 10px #000;
+}
+
+.jumbotron {
+  background-image: url("/img/bidan02.png");
+  background-size: cover;
+  height: 60vh;
 }
