--- a/public/css/style.css
+++ b/public/css/style.css
@@ -18,6 +18,11 @@ section {
   text-align: justify;
 }
 
+.box-shadow {
+  -webkit-box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.4);
+  box-shadow: 0px 3px 15px 3px rgba(0, 0, 0, 0.4);
+}
+
 .top-navbar {
   height: 60px;
 }
@@ -60,7 +65,7 @@ section {
 
 .text-neon {
   color: #fff;
-  text-shadow: 0 0 5px #000, 0 0 10px #000;
+  text-shadow: 0 0 5px #000, 0 0 10px #000, 0 0 15px #000, 0 0 20px #000;
 }
 
 .jumbotron {
