--- a/public/css/style.css
+++ b/public/css/style.css
@@ -42,6 +42,12 @@ section {
   z-index: 2;
 }
 
+.overflow {
+  display: inline-block;
+  overflow: auto;
+  vertical-align: top;
+}
+
 .hr-short {
   margin-left: auto;
   margin-right: auto;
